# folderclone-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: functions.rs  google.rs  main.rs
