[package]
name = "clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
google-drive3 = "5.0.2"
async-recursion = "1.0.4"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.27"
