[package]
name = "drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
rand = "0.8.5"
futures = "0.3.27"
env_logger = "0.10.0"
google-drive3 = "5.0.2"
async-recursion = "1.0.4"
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
